# Anki-add-IPA

./: README.md  config.py  dev.ipynb  main.ipynb  main.py  menu.py  pyproject.toml  run.bat  runapp.bat  runapp.ps1  runconfig.bat  runconfig.ps1
META/: DEVNOTES  TODO
cmdscripts/win/: runapp.ps1  runconfig.ps1  runmenu.ps1  runtestword.ps1
outputs/: -되다_response_text_content.html  after_anki@20250217-171308.json  after_anki@20250217-180544.json  after_anki@20250217-181854.json  after_anki@20250217-232013.json  after_anki@20250217-232407.json  after_anki@20250217-233253.json  anki@20250212-040543.json  anki@20250212-041412.json  anki@20250212-041637.json  anki@20250212-041854.json  anki@20250217-164153.json  anki@20250217-171308.json  anki@20250217-180544.json  anki@20250217-181854.json  anki@20250217-225046.json  anki@20250217-230112.json  anki@20250217-230608.json  anki@20250217-230838.json  anki@20250217-230933.json  anki@20250217-231253.json  anki@20250217-232407.json  anki@20250217-233253.json  final_anki@20250212-041854.json  final_anki@20250217-233253.json  놀다_response_text_content.html  돈_response_text_content.html  돌_response_text_content.html  되다_response_text_content.html  오다_response_text_content.html  책_response_text_content.html
utils/: __init__.py  anki.py  app.py  config_helper.py  file.py  scraper.py  utils.py
