[project]
name = "Anki-add-IPA"
version = "0.1.0"
description = ""
authors = [
    {name = "Dragos Buhnila", email = "s331394@studenti.polito.it"}
]
readme = "README.md"
requires-python = ">=3.13,<4.0"
dependencies = [
    "requests (>=2.32.3,<3.0.0)",
    "bs4 (>=0.0.2,<0.0.3)",
    "tqdm (>=4.67.1,<5.0.0)",
    "ipykernel (>=6.29.5,<7.0.0)",
    "joblib (>=1.4.2,<2.0.0)",
    "inquirerpy (>=0.3.4,<0.4.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false